--- a/login.html
+++ b/login.html
@@ -42,6 +42,12 @@
         <h3>Python for Beginners</h3>
         <p>Start programming with one of the most versatile languages.</p>
       </div>
+      <div>
+        <h3>DSA for beginners</h3>
+        <p>
+          This includes some of the most important concepts of DSA
+        </p>
+      </div>
     </div>
   </section>
 
